Fix help center obstruction on mobile

--- a/source/assets/stylesheets/components/_help-center-widget.scss
+++ b/source/assets/stylesheets/components/_help-center-widget.scss
@@ -3,13 +3,11 @@
   bottom: 0;
   right: 0;
   z-index: 1031;
-  width: 100%;
-  height: 100%;
-  @include media-breakpoint-up(md){
-    width: auto;
-  } 
 
   &[open] {
+    width: 100%;
+    height: 100%;
+
     summary::after {
       @include media-breakpoint-up(md){
         content: "";
